--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Conduct of life -- Early works to 1800'
 - !lcsh 'Ethics, Ancient'
 - !lcc 'PA'
+- GITenberg
 title: Ojennusnuora
 url: http://www.gutenberg.org/ebooks/16620
